# data-structures

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: array-iterator.h  array.h  avl-tree.h  binary-heap.h  binary-search-tree.h  binary-tree.h  bloom-filter.h  circular-buffer.h  data-structures.h  doubly-linked-list.h  dynamic-array.h  hash-table.h  linked-list.h  matrix.h  red-black-tree.h  rope.h  singly-linked-list.h  stack.h  string.h  trie.h  xor-linked-list.h
source/: CMakeLists.txt  array-iterator.c  array-iterator.h  array.c  avl-tree-node-queue.c  avl-tree-node-queue.h  avl-tree-node.c  avl-tree-node.h  avl-tree.c  binary-heap.c  binary-search-tree.c  binary-tree-iterator.c  binary-tree-iterator.h  binary-tree-node.c  binary-tree-node.h  binary-tree.c  bloom-filter.c  circular-buffer.c  doubly-linked-list-node.c  doubly-linked-list-node.h  doubly-linked-list.c  dynamic-array.c  generic-binary-tree-traverse.c  generic-binary-tree-traverse.h  hash-table-pair.c  hash-table-pair.h  hash-table.c  linked-list-node.c  linked-list-node.h  linked-list.c  matrix.c  red-black-tree-node.c  red-black-tree-node.h  red-black-tree.c  rope.c  singly-linked-list-node.c  singly-linked-list-node.h  singly-linked-list.c  stack.c  trie.c  (+3 more)
source/avl-tree/: node-queue.c  node-queue.h  node-stack.c  node-stack.h  node.c  node.h
source/binary-tree/: iterator.c  iterator.h  node.c  node.h
source/doubly-linked-list/: node.c  node.h
source/hash-table/: pair.c  pair.h
source/red-black-tree/: node-queue.c  node-queue.h  node.c  node.h
source/singly-linked-list/: node.c  node.h
source/xor-linked-list/: node.c  node.h
test/: CMakeLists.txt  array-test.c  avl-tree-test.c  binary-heap-test.c  binary-search-tree-test.c  bloom-filter-test.c  circular-buffer-test.c  data-structures-test.c  doubly-linked-list-test.c  dynamic-array-test.c  hash-table-test.c  linked-list-test.c  matrix-test.c  red-black-tree-test.c  singly-linked-list-test.c  stack-test.c  trie-test.c  xor-linked-list-test.c
