cmake_minimum_required(VERSION 3.22.1)

project(data-structures)

set(CMAKE_BUILD_TYPE Release)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_SHARED_LIBRARY_PREFIX "")
set(CMAKE_C_VISIBILITY_PRESET hidden)
set(CMAKE_CXX_VISIBILITY_PRESET hidden)
set(CMAKE_VISIBILITY_INLINES_HIDDEN YES)

# add_compile_options(-Wall -Wextra -g -Werror)
# set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg")

add_library(array SHARED source/array.c)
add_library(avl-tree SHARED source/avl-tree.c source/avl-tree-node.c source/array.c source/stack.c source/circular-buffer.c)
add_library(binary-heap SHARED source/binary-heap.c)
add_library(bloom-filter SHARED source/bloom-filter.c source/array.c)
add_library(circular-buffer SHARED source/circular-buffer.c source/array.c)
add_library(doubly-linked-list SHARED source/doubly-linked-list.c source/doubly-linked-list-node.c)
add_library(dynamic-array SHARED source/dynamic-array.c source/array.c)
add_library(hash-table SHARED source/hash-table.c source/hash-table-pair.c)
add_library(singly-linked-list SHARED source/singly-linked-list.c source/singly-linked-list-node.c)
add_library(matrix SHARED source/matrix.c source/array.c)
add_library(red-black-tree SHARED source/red-black-tree.c source/red-black-tree-node.c
    source/array.c source/stack.c source/circular-buffer.c)
add_library(stack SHARED source/stack.c source/array.c)
# add_library(trie SHARED source/trie.c)
add_library(xor-linked-list SHARED source/xor-linked-list.c source/xor-linked-list-node.c)

target_include_directories(array PUBLIC include)
target_include_directories(avl-tree PUBLIC include)
target_include_directories(binary-heap PUBLIC include)
target_include_directories(bloom-filter PUBLIC include)
target_include_directories(circular-buffer PUBLIC include)
target_include_directories(doubly-linked-list PUBLIC include)
target_include_directories(dynamic-array PUBLIC include)
target_include_directories(singly-linked-list PUBLIC include)
target_include_directories(hash-table PUBLIC include)
target_include_directories(matrix PUBLIC include)
target_include_directories(red-black-tree PUBLIC include)
target_include_directories(stack PUBLIC include)
# target_include_directories(trie PUBLIC include)
target_include_directories(xor-linked-list PUBLIC include)

if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
    enable_testing()
    add_executable(data-structures-test test/data-structures-test.c)
    add_test(NAME data-structures-test COMMAND data-structures-test)
    # set_target_properties(array-test PROPERTIES OUTPUT_NAME array)
    target_link_libraries(data-structures-test PUBLIC array)
endif()
