add_library(array SHARED array.c)
add_library(avl-tree SHARED avl-tree.c array.c stack.c circular-buffer.c)
add_library(binary-heap SHARED binary-heap.c)
add_library(bloom-filter SHARED bloom-filter.c array.c)
add_library(circular-buffer SHARED circular-buffer.c array.c)
add_library(doubly-linked-list SHARED doubly-linked-list.c)
add_library(dynamic-array SHARED dynamic-array.c array.c)
add_library(hash-table SHARED hash-table.c)
add_library(linked-list SHARED linked-list.c)
add_library(matrix SHARED matrix.c array.c)
add_library(red-black-tree SHARED red-black-tree.c array.c stack.c circular-buffer.c)
add_library(stack SHARED stack.c array.c)
add_library(trie SHARED trie.c)
add_library(xor-linked-list SHARED xor-linked-list.c)
