add_executable(array-test array-test.c)
add_test(NAME array-test COMMAND array-test)

add_executable(avl-tree-test avl-tree-test.c)
add_executable(binary-heap-test binary-heap-test.c)
add_executable(bloom-filter-test bloom-filter-test.c)
add_executable(circular-buffer-test circular-buffer-test.c)
add_executable(dynamic-array-test dynamic-array-test.c)
add_executable(doubly-linked-list-test doubly-linked-list-test.c)
add_executable(hash-table-test hash-table-test.c)
add_executable(linked-list-test linked-list-test.c)
add_executable(matrix-test matrix-test.c)
add_executable(red-black-tree-test red-black-tree-test.c)
add_executable(stack-test stack-test.c)
add_executable(trie-test trie-test.c)
add_executable(xor-linked-list-test xor-linked-list-test.c)

# add_test(NAME avl-tree-test avl-tree-test.c)
# add_test(NAME binary-heap-test binary-heap-test.c)
# add_test(NAME bloom-filter-test bloom-filter-test.c)
# add_test(NAME circular-buffer-test circular-buffer-test.c)
# add_test(NAME dynamic-array-test dynamic-array-test.c)
# add_test(NAME doubly-linked-list-test doubly-linked-list-test.c)
# add_test(NAME hash-table-test hash-table-test.c)
# add_test(NAME linked-list-test linked-list-test.c)
# add_test(NAME matrix-test matrix-test.c)
# add_test(NAME red-black-tree-test red-black-tree-test.c)
# add_test(NAME stack-test stack-test.c)
# add_test(NAME trie-test trie-test.c)
# add_test(NAME xor-linked-list-test xor-linked-list-test.c)

# set_target_properties(array-test PROPERTIES OUTPUT_NAME array)
# set_target_properties(avl-tree-test PROPERTIES OUTPUT_NAME avl-tree)
# set_target_properties(binary-heap-test PROPERTIES OUTPUT_NAME binary-heap)
# set_target_properties(bloom-filter-test PROPERTIES OUTPUT_NAME bloom-filter)
# set_target_properties(circular-buffer-test PROPERTIES OUTPUT_NAME circular-buffer)
# set_target_properties(doubly-linked-list-test PROPERTIES OUTPUT_NAME doubly-linked-list)
# set_target_properties(dynamic-array-test PROPERTIES OUTPUT_NAME dynamic-array)
# set_target_properties(hash-table-test PROPERTIES OUTPUT_NAME hash-table)
# set_target_properties(linked-list-test PROPERTIES OUTPUT_NAME linked-list)
# set_target_properties(matrix-test PROPERTIES OUTPUT_NAME matrix)
# set_target_properties(red-black-tree-test PROPERTIES OUTPUT_NAME red-black-tree)
# set_target_properties(stack-test PROPERTIES OUTPUT_NAME stack)
# set_target_properties(trie-test PROPERTIES OUTPUT_NAME trie)
# set_target_properties(xor-linked-list-test PROPERTIES OUTPUT_NAME xor-linked-list)
